# rust-auth-service

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2025-11-01-123406-0000_create_users/: up.sql
src/: auth.rs  handler.rs  main.rs  models.rs  schema.rs  services.rs
