[package]
name = "rust-auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] } 
#purana wala crate kaam nahi kar raha 